[metadata]
name = ltbl
description = a package for making pretty lights do things
author = noahgill409@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    ltbl
python_requires = >= 3.10
package_dir =
    =src
zip_safe = no
